--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "scripts": {
     "style:check": "standard --verbose | snazzy",
     "style:fix": "standard --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "gulp --gulpfile tasks/index.js",
+    "test": "npm run style:check && mocha"
   },
   "keywords": [],
   "author": "Richard King <richrdkng@gmail.com> (www.richrdkng.com)",
   "license": "ISC",
+  "standard": {
+    "env": [ "mocha" ]
+  },
   "devDependencies": {
+    "gulp": "^4.0.0",
+    "mocha": "^6.1.4",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
   }
