--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "style:check": "standard --verbose | snazzy",
     "style:fix": "standard --fix",
     "gulp": "gulp --gulpfile tasks/index.js",
-    "test": "npm run style:check && mocha"
+    "build": "echo BUILD",
+    "test:src": "mocha",
+    "test:dist": "mocha",
+    "test": "npm run test:src && npm run test:dist"
   },
   "keywords": [],
   "author": "Richard King <richrdkng@gmail.com> (www.richrdkng.com)",
