--- a/.travis.yml
+++ b/.travis.yml
@@ -20,17 +20,15 @@ cache:
 jobs:
   include:
     - stage: build
-      script:
-        - npm run build
+      script: npm run build
 
     - stage: test
       name: "test:src"
-      script:
-        - npm run test:src
+      script: npm run test:src
 
+    - stage: test
       name: "test:dist"
-      script:
-        - npm run test:dist
+      script: npm run test:dist
 
     # - stage: release
     #   script: skip
