--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "style:check": "echo OK || standard --verbose | snazzy",
+    "style:check": "standard --verbose | snazzy",
     "style:fix": "standard --fix",
     "gulp": "gulp --gulpfile tasks/index.js",
     "build": "echo BUILD",
-    "test:src": "npm run style:check && cross-env MODULE=src mocha",
-    "test:dist": "npm run style:check && cross-env MODULE=dist mocha",
+    "mocha": "mocha test/cases/*.test.js test/cases/**/*.test.js",
+    "test:src": "npm run style:check && cross-env MODULE=src npm run mocha",
+    "test:dist": "npm run style:check && cross-env MODULE=dist npm run mocha",
     "test": "npm run test:src && npm run test:dist"
   },
   "keywords": [],
