--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
   "scripts": {
     "style:check": "standard --verbose | snazzy",
     "style:fix": "standard --fix",
-    "gulp": "gulp --gulpfile tasks/index.js",
-    "build": "echo BUILD",
-    "mocha": "mocha test/cases/*.test.js test/cases/**/*.test.js",
-    "test:src": "npm run style:check && cross-env MODULE=src npm run mocha",
-    "test:dist": "npm run style:check && cross-env MODULE=dist npm run mocha",
-    "test": "npm run test:src && npm run test:dist"
+    "test": "npm run style:check && mocha test/cases/*.test.js test/cases/**/*.test.js"
   },
   "keywords": [
     "option",
@@ -43,8 +38,6 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "gulp": "^4.0.0",
     "mocha": "^6.1.4",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
