--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ node_js:
 
 os:
   - linux
-  - osx
-  - windows
+  # - osx
+  # - windows
 
 sudo: false
 
@@ -19,11 +19,14 @@ cache:
 jobs:
   include:
     - stage: test
-      script: npm run test
+      script:
+        - npm run test
 
     - stage: release
       script:
+        # restructure the package
         - rm -rf index.js test && mv src/* . && rm -rf src
+        # list and show the files that will be released
         - ls -lah1
         - npm pack --dry-run
 
