ci(travis): tinker with Travis CI config

--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,18 @@
 # GitHub templates
 .github
 
+# Coverage directories
+coverage
+.nyc_output
+
 # source directory
 /src
 
 # build-related files
 .gitattributes
+.czrc
 .nvmrc
+.nycrc
 .releaserc
 .travis.yml
 
