--- a/package.json
+++ b/package.json
@@ -37,18 +37,13 @@
   "scripts": {
     "style:check": "standard --verbose | snazzy",
     "style:fix": "standard --fix",
-    "test": "npm run style:check && mocha test/cases/*.test.js test/cases/**/*.test.js",
-    "commit": "git-cz"
+    "test": "npm run style:check && nyc mocha test/cases/*.test.js test/cases/**/*.test.js",
+    "commit": "npx git-cz"
   },
   "standard": {
     "env": [
       "mocha"
     ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.2",
@@ -58,8 +53,10 @@
     "@semantic-release/npm": "^5.1.4",
     "@semantic-release/release-notes-generator": "^7.1.4",
     "commitizen": "^3.1.1",
+    "coveralls": "^3.0.3",
     "cz-conventional-changelog": "^2.1.0",
     "mocha": "^6.1.4",
+    "nyc": "^14.0.0",
     "semantic-release": "^15.13.3",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
