--- a/.nycrc
+++ b/.nycrc
@@ -1,4 +1,10 @@
 {
+  "check-coverage": true,
+  "per-file": true,
+  "lines": 100,
+  "statements": 100,
+  "functions": 100,
+  "branches": 100,
   "reporter": [
     "html",
     "text-summary",
