--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "style:check": "standard --verbose | snazzy",
     "style:fix": "standard --fix",
-    "test": "npm run style:check && nyc mocha",
+    "test": "npm run style:check && nyc mocha \"test/**/*.test.js\"",
     "commit": "npx git-cz"
   },
   "standard": {
