--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,11 @@ jobs:
     - stage: release
       script:
         # restructure the package, then list the files that will be released
-        - rm index.js        # remove files in project root
-        - rm -rf test tasks  # remove directories
-        - mv src/* .         # move code to the project root
-        - rm -rf src         # remove previous code directory
-        - npm pack --dry-run # list the files
+        - rm index.js            # remove files in project root
+        - rm -rf docs tasks test # remove directories
+        - mv src/* .             # move code to the project root
+        - rm -rf src             # remove previous code directory
+        - npm pack --dry-run     # list the files
 
       deploy:
         skip_cleanup: true
