--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "optionist",
   "version": "0.0.0-development",
-  "description": "A powerful option parser utility, a.k.a. Options Specialist.",
+  "description": "A powerful options object parser utility, a.k.a. Options Specialist.",
   "author": "Richard King <richrdkng@gmail.com> (www.richrdkng.com)",
   "license": "ISC",
   "homepage": "https://github.com/nodewell/optionist#readme",
@@ -21,6 +21,10 @@
     "opts",
     "parser",
     "parsing",
+    "option object",
+    "options object",
+    "option-object",
+    "options-object",
     "option-parser",
     "options-parser",
     "option-parsing",
@@ -29,6 +33,7 @@
     "options specialist",
     "option-specialist",
     "options-specialist",
+    "object",
     "specialist",
     "merge",
     "utility",
