--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "^2.1.0",
     "del": "^4.1.0",
+    "fast-glob": "^2.2.6",
     "fs-extra": "^7.0.1",
     "gulp": "^4.0.0",
     "jsdoc-to-markdown": "^4.0.1",
